--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </a>
             <ul class="nav-links">
                 <li><a href="#services">Diensten</a></li>
-                <li><a href="#about">Over Ons</a></li>
+                <li><a href="#about">Over ons</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="hamburger">
@@ -73,14 +73,14 @@
         <div class="container hero-content">
             <img src="assets/logo-full.svg" alt="Tack-IT" class="hero-logo">
             <p>Uw partner voor IT-oplossingen, van applicatieontwikkeling tot SEO-geoptimaliseerde websites.</p>
-            <a href="#contact" class="btn">Neem Contact Op</a>
+            <a href="#contact" class="btn">Neem contact op</a>
         </div>
     </section>
 
     <!-- Services Section -->
     <section id="services" class="section services">
         <div class="container">
-            <h2>Onze Diensten</h2>
+            <h2>Onze diensten</h2>
             <div class="services-grid">
                 <!-- Service 1: IT Problemen -->
                 <div class="card">
@@ -92,7 +92,7 @@
                             <line x1="12" y1="17" x2="12" y2="21"></line>
                         </svg>
                     </div>
-                    <h3>IT Support</h3>
+                    <h3>IT-support</h3>
                     <p>Heeft u computerproblemen of netwerkstoringen? Wij lossen al uw hardware- en softwareproblemen
                         vakkundig op.</p>
                 </div>
@@ -109,7 +109,7 @@
                             </path>
                         </svg>
                     </div>
-                    <h3>Websites Bouwen</h3>
+                    <h3>Website bouwen</h3>
                     <p>Moderne, responsieve websites op maat gemaakt. Wij zorgen voor een professionele online
                         aanwezigheid die indruk maakt.</p>
                 </div>
@@ -123,8 +123,8 @@
                             <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
                         </svg>
                     </div>
-                    <h3>SEO Optimalisatie</h3>
-                    <p>Beter gevonden worden in Google? Wij optimaliseren uw website voor zoekmachines zodat klanten u
+                    <h3>SEO-optimalisatie</h3>
+                    <p>Beter gevonden worden online? Wij optimaliseren uw website voor zoekmachines zodat klanten u
                         weten te vinden.</p>
                 </div>
 
@@ -137,8 +137,8 @@
                             <line x1="12" y1="18" x2="12.01" y2="18"></line>
                         </svg>
                     </div>
-                    <h3>Applicatie Ontwikkeling</h3>
-                    <p>Maatwerk software nodig? Van web apps tot mobiele applicaties, wij bouwen de digitale tools die
+                    <h3>Applicatieontwikkeling</h3>
+                    <p>Maatwerk software nodig? Van web apps tot mobiele apps, wij bouwen de digitale tools die
                         uw bedrijf nodig heeft.</p>
                 </div>
             </div>
@@ -183,14 +183,14 @@
                 <div class="value-card">
                     <div class="value-icon">🤝</div>
                     <h4>We helpen, niet overtuigen</h4>
-                    <p>Samenwerken betekent voor ons: naast u staan. Meedenken, uitleggen, bijsturen. Geen ingewikkelde
+                    <p>Samenwerken betekent voor ons: naast u staan, meedenken, uitleggen, bijsturen. Geen ingewikkelde
                         taal om slimmer te lijken. Echte hulp voelt rustig, helder en eerlijk.</p>
                 </div>
                 <div class="value-card">
                     <div class="value-icon">🔐</div>
                     <h4>Verantwoordelijkheid boven alles</h4>
-                    <p>Wat wij bouwen, kan impact hebben op mensen, gegevens en processen. Beveiliging, stabiliteit en
-                        privacy zijn geen extra opties, maar fundamentele keuzes.</p>
+                    <p>Wat wij bouwen kan impact hebben op mensen, gegevens en processen. Beveiliging, stabiliteit en
+                        privacy zijn geen extra opties maar fundamentele keuzes.</p>
                 </div>
                 <div class="value-card">
                     <div class="value-icon">🌱</div>
@@ -202,20 +202,20 @@
 
             <div class="about-conclusion-grid">
                 <div class="audience">
-                    <h3>Voor wie wij bouwen</h3>
+                    <h3>Voor wie wij bouwen:</h3>
                     <ul>
-                        <li>Mensen die verder kijken dan de korte termijn</li>
-                        <li>Waarde hechten aan eerlijkheid en kwaliteit</li>
-                        <li>Technologie willen die hen ondersteunt, niet beheerst</li>
+                        <li>personen die verder kijken dan de korte termijn,</li>
+                        <li>personen die waarde hechten aan eerlijkheid en kwaliteit,</li>
+                        <li>personen die technologie willen die hen ondersteunt, niet beheerst.</li>
                     </ul>
                     <p><strong>Niet voor iedereen. Maar precies voor de juiste mensen.</strong></p>
                 </div>
                 <div class="conclusion">
                     <h3>Tot slot</h3>
-                    <p>Tack-IT is geen merk dat iets wil verkopen. Het is een overtuiging die iets wil bouwen. Met zorg.
-                        Met aandacht. En altijd met de vraag:</p>
+                    <p>Tack-IT is geen merk dat iets wil verkopen. Het is een overtuiging die iets wil bouwen. Met zorg,
+                        met aandacht. Altijd met de vraag:</p>
                     <p class="final-question">Helpt dit echt?</p>
-                    <p>Als het antwoord ja is, dan bouwen we. Als het nee is, dan zoeken we verder.</p>
+                    <p>Als het antwoord 'ja' is, dan bouwen we. Als het 'nee' is, dan zoeken we verder.</p>
                 </div>
             </div>
         </div>
@@ -224,7 +224,7 @@
     <!-- Contact Section -->
     <section id="contact" class="section contact">
         <div class="container">
-            <h2>Start uw Project</h2>
+            <h2>Start uw project</h2>
             <div class="contact-container">
                 <div class="contact-info">
                     <p>Klaar om uw digitale ambities waar te maken? Neem vandaag nog contact op voor een vrijblijvend
@@ -245,16 +245,16 @@
                     <!-- CHANGE ACTION URL: Vervang de link hieronder met je eigen Formspree link -->
                     <form action="https://formspree.io/f/xbdkyajw" method="POST">
                         <div class="form-group">
-                            <input type="text" name="name" placeholder="Uw Naam" required>
+                            <input type="text" name="name" placeholder="Uw naam" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" name="email" placeholder="Uw Email" required>
+                            <input type="email" name="email" placeholder="Uw email" required>
                         </div>
                         <div class="form-group">
-                            <textarea name="message" placeholder="Waar kunnen we u mee helpen?" required></textarea>
+                            <textarea name="message" placeholder="Waarmee kunnen we u helpen?" required></textarea>
                         </div>
                         <button type="submit" class="btn"
-                            style="background: white; color: var(--accent-color);">Verstuur Bericht</button>
+                            style="background: white; color: var(--accent-color);">Verstuur bericht</button>
                     </form>
                 </div>
             </div>
