added VAT number and capped the max amount of particles for the hero background

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
+            <p class="vat-info">BTW BE0730.901.037</p>
             <p>&copy; 2026 Tack-IT. Alle rechten voorbehouden.</p>
         </div>
     </footer>
