feat: Add comprehensive favicon and app icon assets, update branding image references, and include detailed address in schema.org.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="assets/logo-Icon.svg">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/android-chrome-512x512.png">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -22,7 +25,7 @@
     <meta property="og:title" content="Tack-IT - IT Oplossingen, Websites & SEO">
     <meta property="og:description"
         content="Tack-IT helpt bij al uw IT-problemen. Van applicatieontwikkeling en websites bouwen tot SEO-optimalisatie. Professional en betrouwbaar.">
-    <meta property="og:image" content="assets/logo-full.svg">
+    <meta property="og:image" content="assets/logo-full.png">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -30,15 +33,17 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "Tack-IT",
-      "image": "assets/logo-full.svg",
+      "image": "assets/logo-full.png",
       "description": "Tack-IT helpt bij al uw IT-problemen. Van applicatieontwikkeling en websites bouwen tot SEO-optimalisatie.",
       "email": "contact@tackit.be",
       "url": "https://tackit.be/",
       "address": {
         "@type": "PostalAddress",
+        "streetAddress": "Kouterstraat 154/3",
+        "addressLocality": "Zele",
+        "postalCode": "9240",
         "addressCountry": "BE"
-      },
-      "priceRange": "$$"
+      }
     }
     </script>
 
